# Pangolin

./: .gitignore  CMakeLists.txt  README.txt
CMakeModules/: FindFFMPEG.cmake  FindFREEGLUT.cmake  FindGLEW.cmake
MSVC_LIBS/GLEW/lib/: glew32.exp  glew32.lib  glew32d.exp  glew32d.lib  glew32s.lib  glew32sd.lib
MSVC_LIBS/freeglut/lib/x64/: freeglut_static.lib
MSVC_LIBS/freeglut/lib/x86/: freeglut_static.lib
examples/SimpleDisplay/: CMakeLists.txt  main.cpp
examples/SimpleDisplayImage/: CMakeLists.txt  main.cpp
examples/SimpleMultiDisplay/: CMakeLists.txt  main.cpp
examples/SimplePlot/: CMakeLists.txt  main.cpp
examples/SimpleRecord/: CMakeLists.txt  main.cpp
examples/SimpleRepeatVideo/: CMakeLists.txt  main.cpp
examples/SimpleVideo/: CMakeLists.txt  main.cpp
examples/VBODisplay/: CMakeLists.txt  main.cpp
pangolin/: CMakeLists.txt  PangolinConfig.cmake.in  cg.h  display.cpp  display.h  display_internal.h  ffmpeg.cpp  ffmpeg.h  firewire.cpp  firewire.h  gl.h  glcuda.h  gldraw.h  glsl.h  input_record_repeat.cpp  input_record_repeat.h  pangolin.h  platform.h  plotter.cpp  plotter.h  pvn_video.h  simple_math.h  threadedfilebuf.cpp  threadedfilebuf.h  timer.h  v4l.cpp  v4l.h  vars.cpp  vars.h  vars_internal.h  video.cpp  video.h  video_record_repeat.cpp  video_record_repeat.h  video_recorder.cpp  video_recorder.h  widgets.cpp  widgets.h
pangolin/video/: ffmpeg.cpp  ffmpeg.h  firewire.cpp  firewire.h  pvn_video.cpp  pvn_video.h  v4l.cpp  v4l.h
