# Ensure Samples can find library
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
REMOVE_DEFINITIONS(-DLIBRARY_EXPORTS)
#LINK_DIRECTORIES(${pangolin_BINARY_DIR}/pangolin)

FIND_PACKAGE(FREEGLUT QUIET)
FIND_PACKAGE(Boost QUIET)

#IF(MSVC)
#      SET(Boost_USE_STATIC_LIBS ON)
#      SET(Boost_USE_STATIC_RUNTIME ON)
#      ADD_DEFINITIONS(-DFREEGLUT_STATIC)
#We statically link to reduce dependancies
#FOREACH(flag_var
#        CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE
#        CMAKE_CXX_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_RELWITHDEBINFO)
#   IF(${flag_var} MATCHES "/MD")
#      string(REGEX REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
#   ENDIF(${flag_var} MATCHES "/MD")
#ENDFOREACH(flag_var)
#ENDIF(MSVC)

IF(FREEGLUT_FOUND)
  ADD_EXECUTABLE(SimpleDisplay main.cpp)
  INCLUDE_DIRECTORIES(SimpleDisplay ${FREEGLUT_INCLUDE_DIR} 
                                    ${GLEW_INCLUDE_DIR} 
                                    ${Boost_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(
    SimpleDisplay
    ${LIBRARY_NAME}
  )
ENDIF(FREEGLUT_FOUND)
