# Ensure Samples can find library
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})

FIND_PACKAGE(FREEGLUT QUIET)
FIND_PACKAGE(Boost QUIET)

IF(FREEGLUT_FOUND)
  ADD_EXECUTABLE(SimpleDisplay main.cpp)
  INCLUDE_DIRECTORIES(SimpleDisplay ${FREEGLUT_INCLUDE_DIR} 
                                    ${GLEW_INCLUDE_DIR} 
                                    ${Boost_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(
    SimpleDisplay
    ${LIBRARY_NAME}
  )
ENDIF(FREEGLUT_FOUND)
