# Ensure Samples can find library
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
#LINK_DIRECTORIES(${pangolin_BINARY_DIR}/pangolin)

FIND_PACKAGE(Boost QUIET)
FIND_PACKAGE(FREEGLUT QUIET)

IF(MSVC)
   ADD_DEFINITIONS(-DFREEGLUT_STATIC)
ENDIF(MSVC)

IF(FREEGLUT_FOUND)
  ADD_EXECUTABLE(SimpleMultiDisplay main.cpp)
  INCLUDE_DIRECTORIES(SimpleMultiDisplay ${FREEGLUT_INCLUDE_DIR} ${GLEW_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(SimpleMultiDisplay ${Boost_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES(
    SimpleMultiDisplay
    ${LIBRARY_NAME}
  )
ENDIF()
