# Ensure Samples can find library
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
REMOVE_DEFINITIONS(-DLIBRARY_EXPORTS)
#LINK_DIRECTORIES(${pangolin_BINARY_DIR}/pangolin)

FIND_PACKAGE(FREEGLUT QUIET)

IF(MSVC)
   SET(BOOST_ROOT "C:/boost/boost_1_49_0")
   IF(BUILD_SHARED_LIB)
      ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
   ELSE(BUILD_SHARED_LIB)
      SET(Boost_USE_STATIC_LIBS ON)
      SET(Boost_USE_STATIC_RUNTIME ON)
   ENDIF(BUILD_SHARED_LIB)
ENDIF(MSVC)
FIND_PACKAGE(Boost QUIET)

IF(FREEGLUT_FOUND AND Boost_FOUND)
  ADD_EXECUTABLE(SimplePlot main.cpp)
  LINK_DIRECTORIES(
    ${Boost_LIBRARY_DIRS}
  )
  INCLUDE_DIRECTORIES(
    ${FREEGLUT_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${GLEW_INCLUDE_DIR}
  )
  TARGET_LINK_LIBRARIES(
    SimplePlot
    ${LIBRARY_NAME}
  )
ENDIF()
