# Ensure Samples can find library
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})

FIND_PACKAGE(FREEGLUT QUIET)

IF(MSVC)
   IF(BUILD_SHARED_LIB)
      ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
   ELSE(BUILD_SHARED_LIB)
      SET(Boost_USE_STATIC_LIBS ON)
      SET(Boost_USE_STATIC_RUNTIME ON)
   ENDIF(BUILD_SHARED_LIB)
ENDIF(MSVC)
FIND_PACKAGE(Boost QUIET)

IF(FREEGLUT_FOUND )
  ADD_EXECUTABLE(SimpleRepeatVideo main.cpp)
  INCLUDE_DIRECTORIES(
    ${FREEGLUT_INCLUDE_DIR}
    ${GLEW_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
  )
  TARGET_LINK_LIBRARIES(
    SimpleRepeatVideo
    ${LIBRARY_NAME}
  )
ENDIF()
