# Ensure Samples can find library
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})

FIND_PACKAGE(FREEGLUT QUIET)
FIND_PACKAGE(Boost QUIET)

IF(MSVC)
   ADD_DEFINITIONS(-DFREEGLUT_STATIC)
ENDIF(MSVC)

IF(FREEGLUT_FOUND )
  ADD_EXECUTABLE(SimpleVideo main.cpp)
  INCLUDE_DIRECTORIES(
    ${FREEGLUT_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${GLEW_INCLUDE_DIR}
  )
  TARGET_LINK_LIBRARIES(
    SimpleVideo
    ${LIBRARY_NAME}
    ${FREEGLUT_LIBRARY}
  )
ENDIF()
