# Find Pangolin (https://github.com/stevenlovegrove/Pangolin)
FIND_PACKAGE(Pangolin REQUIRED)
INCLUDE_DIRECTORIES(${Pangolin_INCLUDE_DIRS})
LINK_DIRECTORIES(${Pangolin_LIBRARY_DIRS})
LINK_LIBRARIES(${Pangolin_LIBRARIES})

FIND_PACKAGE(CUDA QUIET)

IF(CUDA_FOUND)
  CUDA_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

  SET(CUDA_NVCC_FLAGS "-O3")
  ADD_DEFINITIONS(-DCUDA_BUILD)

  IF(CUDA_SDK_ROOT_DIR)
    INCLUDE_DIRECTORIES( ${CUDA_SDK_ROOT_DIR}/common/inc )    
  ENDIF()

  CUDA_ADD_EXECUTABLE(
    VBODisplay
    main.cpp kernal.cu
  )

ENDIF()
